# z2p

./: .env  .gitignore  Cargo.toml  Dockerfile  config.example.json  config.json  docker-compose.yaml  init_db.sh
.github/workflows/: audit.yml  general.yml
.sqlx/: query-45385ce4779180d81d4beebcffde39b5a361adaac3e95267b73d8cd34acd6851.json
config/: base.json
migrations/: 20240205085825_create_subscription_table.sql  20241005161545_add_status_to_subscriptions.sql  20241005161858_subscription_status_mandatory.sql  20241005162119_create_subscription_token_table.sql
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/api/: subscribe.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscribe.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscribe.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
