[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "z2p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.5.1"
actix-web = "4.4.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.24"
